force-app/main/default/objects/Group__c/Group__c.object-meta.xml
<CustomObject>
    <label>Bank</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>