force-app/main/default/objects/Group__c/fields/Group_CommActual__c.field-meta.xml
<CustomField>
    <fullName>Group_CommActual__c</fullName>
    <label>Commodity Actual</label>
    <summarizedField>Division__c.Div_CommActual__c</summarizedField>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>