force-app/main/default/objects/Group__c/fields/Group_CommTarget__c.field-meta.xml
<CustomField>
    <fullName>Group_CommTarget__c</fullName>
    <label>Commodity Target</label>
    <summarizedField>Division__c.Div_CommTarget__c</summarizedField>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>