force-app/main/default/objects/Group__c/fields/Group_CRMActual__c.field-meta.xml
<CustomField>
    <fullName>Group_CRMActual__c</fullName>
    <label>CRM Actual</label>
    <summarizedField>Division__c.Div_CRMActual__c</summarizedField>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>