force-app/main/default/objects/Group__c/fields/Group_CRMTarget__c.field-meta.xml
<CustomField>
    <fullName>Group_CRMTarget__c</fullName>
    <label>CRM Target</label>
    <summarizedField>Division__c.Div_CRMTarget__c</summarizedField>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>