force-app/main/default/objects/Group__c/fields/Group_FXActual__c.field-meta.xml
<CustomField>
    <fullName>Group_FXActual__c</fullName>
    <formula>Group_FXDirectActual__c  +  Group_FXIndirectActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>