force-app/main/default/objects/Group__c/fields/Group_FXDirectActual__c.field-meta.xml
<CustomField>
    <fullName>Group_FXDirectActual__c</fullName>
    <label>FX Direct Actual</label>
    <summarizedField>Division__c.Div_FXDirectActual__c</summarizedField>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>