force-app/main/default/objects/Group__c/fields/Group_FXDirectTarget__c.field-meta.xml
<CustomField>
    <fullName>Group_FXDirectTarget__c</fullName>
    <label>FX Direct Target</label>
    <summarizedField>Division__c.Div_FXDirectTarget__c</summarizedField>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>