force-app/main/default/objects/Group__c/fields/Group_FXIndirectActual__c.field-meta.xml
<CustomField>
    <fullName>Group_FXIndirectActual__c</fullName>
    <label>FX Indirect Actual</label>
    <summarizedField>Division__c.Div_FXIndirectActual__c</summarizedField>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>