force-app/main/default/objects/Group__c/fields/Group_FXIndirectTarget__c.field-meta.xml
<CustomField>
    <fullName>Group_FXIndirectTarget__c</fullName>
    <label>FX Indirect Target</label>
    <summarizedField>Division__c.Div_FXIndirectTarget__c</summarizedField>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>