force-app/main/default/objects/Group__c/fields/Group_FXRetailActual__c.field-meta.xml
<CustomField>
    <fullName>Group_FXRetailActual__c</fullName>
    <label>FX Retail Actual</label>
    <summarizedField>Division__c.Div_FXRetailActual__c</summarizedField>
    <summaryFilterItems>
        <field>Division__c.Div_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>