force-app/main/default/objects/Group__c/fields/Group_FXTarget__c.field-meta.xml
<CustomField>
    <fullName>Group_FXTarget__c</fullName>
    <formula>Group_FXDirectTarget__c  +  Group_FXIndirectTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>