force-app/main/default/objects/Group__c/fields/Group_IRRMActual__c.field-meta.xml
<CustomField>
    <fullName>Group_IRRMActual__c</fullName>
    <label>IRRM Actual</label>
    <summarizedField>Division__c.Div_IRRMActual__c</summarizedField>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>