force-app/main/default/objects/Group__c/fields/Group_IRRMTarget__c.field-meta.xml
<CustomField>
    <fullName>Group_IRRMTarget__c</fullName>
    <label>IRRM Target</label>
    <summarizedField>Division__c.Div_IRRMTarget__c</summarizedField>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>