force-app/main/default/objects/Group__c/fields/Group_NumberofChilds__c.field-meta.xml
<CustomField>
    <fullName>Group_NumberofChilds__c</fullName>
    <label>Number of Childs</label>
    <summaryFilterItems>
        <field>Division__c.Div_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Division__c.Div_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>