force-app/main/default/objects/Group__c/fields/Group_Status__c.field-meta.xml
<CustomField>
    <fullName>Group_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>