force-app/main/default/objects/Group__c/validationRules/Bank_Cannot_be_update_to_inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Cannot_be_update_to_inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Group_NumberofChilds__c&gt;0,Text(Group_Status__c)=&#39;Inactive&#39;)</errorConditionFormula>
    <errorMessage>Bank cannot be updated to Inactive ,as it contains the Active Group.</errorMessage>
</ValidationRule>