force-app/main/default/objects/Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Group_Status__c</columns>
    <columns>Group_FXDirectTarget__c</columns>
    <columns>Group_FXDirectActual__c</columns>
    <columns>Group_FXIndirectTarget__c</columns>
    <columns>Group_FXIndirectActual__c</columns>
    <columns>Group_CRMTarget__c</columns>
    <columns>Group_CRMActual__c</columns>
    <columns>Group_CommTarget__c</columns>
    <columns>Group_CommActual__c</columns>
    <columns>Group_IRRMTarget__c</columns>
    <columns>Group_IRRMActual__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>